# CacheRoute

./: AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
client/: README.md  client.py  command_input.py  kv_timing_sender.py  perf_client.py  repl.py  workload.json  workload_simple_example.json
core/: README.md  __init__.py  config.py  fwd.py  model_calculation.py  request.py  tokenizer_registry.py
doc/: LMCache_config_para.md  codex_workflow.md  pool_resource_metrics.md  resource_metric_hierarchy.md
env/: README.md  RUST_AGENT.md  memory_management.py  token_database.py
instance/: README.md  __init__.py  control_plane.py  instance_api.py  kv_service.py  mock_resp.py
kdn_server/: README.md  __init__.py  kdn_api.py  kdn_register_cli.py  kv_builder.py  kv_injector.py  text_db.py
model/: __init__.py  embedding_engine.py  model_config.py
proxy/: README.md  __init__.py  proxy.py
scheduler/: README.md  scheduler.py  scheduler_cli.py
store/: __init__.py  embedding_method.py  knowledge_base.py  knowledge_build.py  knowledge_interface.py
test/: Injection_method_comparison.py  Prefill_calculation.py  README.md  demo_client.py  demo_embedding.py  demo_instance.py  demo_kdn.py  demo_proxy.py  demo_request_handle.py  demo_resource_monitor_e2e.py  demo_run.py  demo_scheduler.py  quick_start_docker.sh  request_handle.py  test.py  test_client_command_input.py  test_demo_instance_ui.py  test_injector_reuse.py  test_kb_kid.py  test_kv_injector_reuse.py
util/: __init__.py  address_parser.py  kdn_build_kv.py  timer.py  (+1 more)
(+98 files in other folders)
